--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,11 +21,11 @@
             <div class="nav-wrapper">
                 <a href="/" class="brand-logo center">Cagnot'Potes</a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="/create" class="waves-effect waves-light btn pink lighten-1">Créer une campagne</a></li>
+                    <li><a href="{{ path('app_campaign_new') }}" class="waves-effect waves-light btn pink lighten-1">Créer une campagne</a></li>
                 </ul>
 
                 <ul id="nav-mobile" class="sidenav">
-                    <li><a href="/create" class="waves-effect waves-light btn pink lighten-1">Créer une campagne</a></li>
+                    <li><a href="{{ path('app_campaign_new') }}" class="waves-effect waves-light btn pink lighten-1">Créer une campagne</a></li>
                 </ul>
                 <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             </div>
